auth-service: updated centralized security to the user and appointment services endpoints in api-gateway